helm_homework/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-dp
  namespace: miniapp
  labels:
    app: kuber-dp
spec:
  replicas: 2
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: dev
  template:
    metadata:
      labels:
        env: dev
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: kuber-cm
          items:
          - key: app-config
            path: miniapp.conf
      - name: postgres-secret
        secret:
          secretName: kuber-secret
          items:
          - key: postgres-password
            path: postgres_password
      containers:
      - name: kuber-app
        image: maksonday/miniapp:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: config-volume
          mountPath: /usr/local/etc
        - name: postgres-secret
          mountPath: "/secret"
          readOnly: true
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
